--- a/authTest/mainApp/templates/mainApp/rapper.html
+++ b/authTest/mainApp/templates/mainApp/rapper.html
@@ -5,8 +5,9 @@
     <title>Glavnoe eto dusha</title>
     {% load staticfiles %}
     <link rel="stylesheet", href="{% static 'css/bootstrap.min.css' %}", type="text/css">
+        <link rel="stylesheet", href="{% static 'css/khghi.css' %}", type="text/css">
 </head>
-<body background="{% static 'mainApp/image/picture.png' %}" class="img-thumbnail">
+<body class="img-thumbnail">
   <div class="jumbotron">
     <div class="container">
       <h1>{% include "mainApp/include/some_html.html" %}</h1>
