--- a/authTest/news/templates/news/posts.html
+++ b/authTest/news/templates/news/posts.html
@@ -1,8 +1,10 @@
 {% extends 'mainApp/rapper.html' %}
 
+{% load staticfiles %}
 {% block content%}
-    {% for post in object_list %}
+    {% for post in articles %}
 <a href="/news/{{post.id}}"> <h3>{{post.title}}</h3> </a>
 <h5>{{post.date|date:"d-m-Y"}}</h5>
+<p><a href="/news/addLike/{{ post.id }}/"> <img src="{% static 'mainApp/image/like.jpg' %}" width="25px" height="25px"></a>{{post.likes}}</p>
     {% endfor %}
 {% endblock %}
